--- a/crowdsales/datacoin-test.yml
+++ b/crowdsales/datacoin-test.yml
@@ -27,14 +27,14 @@ rinkeby:
         # All crowdsale collected funds are deposited to the this multisig wallet in real time.
         #
         team_multisig:
-            contract_name: Wallet
-            contract_file: Wallet.sol
+            contract_name: MultiSigWallet
+            contract_file: GnosisWallet.sol
             arguments:
                 _owners:
                     - "0xAF9FafbEa019876353c5E3794c86D300fc852e26"
                     - "0x8d4DEED6231427Af94c5DB64DF616e244A86fb68"
                 _required: 2
-                _daylimit: 0
+
         #
         # Pre-ICO fund collector
         #
@@ -119,7 +119,7 @@ rinkeby:
                 #_start: "{{ timestamp(datetime(2017, 7, 14, 16, 0)) }}" what timezone is this?
                 #_end: "{{ timestamp(datetime(2017, 7, 14, 16, 0)) + 30*24*3600 }}" what timezone is this?
                 _minimumFundingGoal: 0
-                _maximumSellableTokens: "{{ 10**9 * 10**18}}" # 1 billion full tokens (10^9) in "tokenWei" (10^18)
+                _maximumSellableTokens: "{{ 7 * 10**8 * 10**18 }}" # 10^9 tokens, minus team 30%, in "atomic numbers" (10^18)
         #
         # Finalize contract
         #
@@ -149,8 +149,8 @@ rinkeby:
         crowdsale.transact({"from": deploy_address}).setFinalizeAgent(finalize_agent.address)
         token.transact({"from": deploy_address}).setReleaseAgent(finalize_agent.address)
 
-        # TODO: Do all the manual team/presale allocations here!
-
+        # Team and presale allocations
+        crowdsale.transact({"from": deploy_address}).preallocate(team_multisig.address, 300000000, 0)
 
         # Move ownership of all owned contracts to the team multisig address
         crowdsale.transact({"from": deploy_address}).transferOwnership(team_multisig.address)
