mainnet deployment changes

--- a/crowdsales/datacoin-coinonly.yml
+++ b/crowdsales/datacoin-coinonly.yml
@@ -1,4 +1,4 @@
-# A testnet deployment for the token, wallet and vault ONLY
+# A deployment for the token, wallet and vault ONLY
 mainnet:
 
     # Chain we are connected to.
